[package]
name = "gst-custom-webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
dirs = "4.0"
futures = "0.3.21"
async-std = "1.12.0"
confy = "*"
structopt = { version = "0.3.26", default-features = false }
anyhow = "1.0.60"
rand = "0.8.5"
blocking = "^1.2"
async-tungstenite = { version = "0.21.0", features = [
  "async-std-runtime",
  "async-native-tls",
] }
gst = { package = "gstreamer", version = "0.20" }
gst-app = { package = "gstreamer-app", version = "0.20.0" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.20.4" }
gst-sdp = { package = "gstreamer-sdp", version = "0.20.0" }
log = "0.4"
env_logger = "0.10.0"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
